Fixed some alignment issues

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 	img {
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
+		padding-left: 50px;
 		padding-top: 50px;
+		
 		}
 		
 	.center {
@@ -14,18 +13,24 @@
 	
 	
 	input {
-		width: 100%;
-	
+		width: 50%;
+		border: 1px solid #cccccc;
+		border-radius: 2px;
+		box-shadow: 2px 2px 1px #cccccc;
+		line-height: 35px;
+		padding-left: 10px;
 	}
 	
 	#button1 {
 		width: 150px;
 		height: 40px;
+		border: none;
 	}
 	
 	#button2 {
 		width: 150px;
 		height: 40px;
+		border: none;
 	}
 	
 	#container {
@@ -61,6 +66,13 @@
 		color: white;
 		padding: 10px;
 		border-radius: 5px;
+	
+	}
+	
+	button:hover {
+		color: black;
+		border: 1px solid #000000;
+		background-color: #f2f2f2;
 	
 	}
 
